--- a/package.json
+++ b/package.json
@@ -9,14 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.7.5",
+    "@heroicons/react": "^2.1.5",
+    "@monaco-editor/react": "^4.6.0",
+    "ace-builds": "^1.36.3",
+    "axios": "^1.7.7",
+    "codemirror": "^5.65.18",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.7.2",
+    "next": "14.2.15",
     "react": "^18",
+    "react-ace": "^12.0.0",
+    "react-codemirror2": "^8.0.0",
     "react-dom": "^18",
-    "next": "14.2.15"
+    "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "14.2.15"
+    "eslint-config-next": "14.2.15",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14"
   }
 }
